<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ActivityMainLayout">

    <include layout="@layout/app_bar_layout" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/main_layout_bkg"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/color_main_icon_background"
                android:elevation="24sp"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textColor="@color/color_about_title"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color_black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/string_about_title"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="italic" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/color_main_icon_background"
                android:elevation="24sp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/string_about_content"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/string_about_contacts"
                android:textSize="@dimen/text_over_medium" />

            <LinearLayout
                style="@style/AboutContactRow"
                android:onClick="openWeb">

                <ImageView
                    style="@style/AboutContactLogo"
                    android:contentDescription="@string/string_about_linkedin"
                    android:src="@drawable/linkedin_icon" />

                <TextView
                    style="@style/AboutContactText"
                    android:text="@string/string_about_linkedin" />
            </LinearLayout>

            <LinearLayout
                style="@style/AboutContactRow"
                android:onClick="sendMail">

                <ImageView
                    style="@style/AboutContactLogo"
                    android:contentDescription="@string/string_about_email"
                    android:src="@drawable/gmail_icon" />

                <TextView
                    style="@style/AboutContactText"
                    android:text="@string/string_about_email" />
            </LinearLayout>


            <TextView
                style="@style/MainBottomText"
                android:text="@string/string_about_bottom_logo" />

        </LinearLayout>
    </FrameLayout>

</LinearLayout>